[gd_scene load_steps=5 format=3 uid="uid://5jookjt8inhg"]

[ext_resource type="Texture2D" uid="uid://csx6dwjh6qt5t" path="res://_working/bottom.png" id="1_2qyrk"]
[ext_resource type="Script" path="res://SlotMachine.gd" id="2_3m6m0"]
[ext_resource type="Texture2D" uid="uid://bw8akebjh8pow" path="res://_working/handle_idle.png" id="3_g3akr"]
[ext_resource type="Texture2D" uid="uid://d34saqgpfys8f" path="res://_working/handle_pulled.png" id="4_kiasm"]

[node name="SlotMachine" type="TextureRect"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2qyrk")
stretch_mode = 3
script = ExtResource("2_3m6m0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.162
anchor_right = 0.74349
anchor_bottom = 0.716
metadata/_edit_use_anchors_ = true

[node name="arm" type="TextureButton" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.734375
anchor_top = 0.090535
anchor_right = 0.86849
anchor_bottom = 0.882716
offset_right = 40.0
offset_bottom = 40.0
action_mode = 0
texture_normal = ExtResource("3_g3akr")
texture_pressed = ExtResource("4_kiasm")
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="arm"]
wait_time = 2.0
one_shot = true

[connection signal="button_down" from="arm" to="." method="_on_arm_button_down"]
[connection signal="button_up" from="arm" to="." method="_on_arm_button_up"]
[connection signal="timeout" from="arm/Timer" to="." method="_on_timer_timeout"]
